[gd_scene load_steps=12 format=3 uid="uid://b3l26hpj3rqxn"]

[ext_resource type="Script" uid="uid://7frsxvq8dw7f" path="res://UnitMenuItem/UnitMenuRow.gd" id="1_ta5x3"]
[ext_resource type="StyleBox" uid="uid://mmblmgoor80e" path="res://UnitMenuItem/MenuItemRowStraightEnds.tres" id="2_owlop"]
[ext_resource type="Texture2D" uid="uid://dqiq6xuia0g32" path="res://Graphics/Icons/sparkles.png" id="3_8udw6"]
[ext_resource type="Texture2D" uid="uid://c6eqc0l1jlv4u" path="res://Graphics/Icons/ray_gun.png" id="4_wvcau"]
[ext_resource type="Texture2D" uid="uid://yas5ipmtr16h" path="res://Graphics/Icons/spaceship.png" id="5_ifkrl"]
[ext_resource type="Texture2D" uid="uid://c4uojx7a3qcm4" path="res://Graphics/Icons/hooded_figure.png" id="6_nhtms"]
[ext_resource type="Texture2D" uid="uid://cd07t7lifoi8s" path="res://Graphics/Icons/microchip.png" id="7_mkm0r"]
[ext_resource type="PackedScene" uid="uid://cj1i70p5sp2jy" path="res://UnitMenuItem/NeedsBar.tscn" id="8_qtv01"]
[ext_resource type="Texture2D" uid="uid://bpbc512k156ps" path="res://Graphics/circle_border.png" id="9_ny7d8"]
[ext_resource type="Texture2D" uid="uid://dheong16pv8d0" path="res://Graphics/ring_background.png" id="10_pgjc5"]
[ext_resource type="Texture2D" uid="uid://cj1kbklwty13p" path="res://Graphics/Portraits/portrait06.png" id="11_gmp50"]

[node name="UnitMenuRow" type="MarginContainer"]
script = ExtResource("1_ta5x3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameAndTitle" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
alignment = 2

[node name="TitlePanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/NameAndTitle"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("2_owlop")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/NameAndTitle/TitlePanel"]
layout_mode = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_right = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/NameAndTitle/TitlePanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Text Text Text"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/NameAndTitle"]
layout_mode = 2

[node name="NamePanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer/NamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 42
theme_override_constants/margin_right = 24

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer/NamePanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.851972, 0.886379, 0.907159, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "CharName"

[node name="NeedsBars" type="MarginContainer" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer/NeedsBars"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
alignment = 2

[node name="AdventureBar" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("8_qtv01")]
layout_mode = 2
value = 99

[node name="FameBar" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("8_qtv01")]
layout_mode = 2
value = 34

[node name="RomanceBar" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("8_qtv01")]
layout_mode = 2
value = 16

[node name="ViceBar" parent="MarginContainer/HBoxContainer/NameAndTitle/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("8_qtv01")]
layout_mode = 2
value = 70

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Charm" type="PanelContainer" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="Heart" type="Sprite2D" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Charm"]
modulate = Color(0.8, 0.08, 0.608, 1)
self_modulate = Color(1, 1, 1, 0.631373)
position = Vector2(8, 15)
scale = Vector2(0.048, 0.048)
texture = ExtResource("3_8udw6")

[node name="CharmLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Charm"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "15"
horizontal_alignment = 2

[node name="Combat" type="PanelContainer" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="Heart2" type="Sprite2D" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Combat"]
modulate = Color(0.301961, 0.443137, 0.788235, 1)
self_modulate = Color(1, 1, 1, 0.631373)
position = Vector2(8, 19)
scale = Vector2(0.048, 0.048)
texture = ExtResource("4_wvcau")

[node name="CombatLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Combat"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "4"
horizontal_alignment = 2

[node name="Pilot" type="PanelContainer" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="Heart3" type="Sprite2D" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Pilot"]
modulate = Color(0.835294, 0.396078, 0.168627, 1)
self_modulate = Color(1, 1, 1, 0.631373)
position = Vector2(6, 15)
scale = Vector2(0.048, 0.048)
texture = ExtResource("5_ifkrl")

[node name="PilotLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Pilot"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "36"
horizontal_alignment = 2

[node name="Stealth" type="PanelContainer" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="Heart4" type="Sprite2D" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Stealth"]
modulate = Color(0.399927, 0.198582, 0.59472, 1)
self_modulate = Color(1, 1, 1, 0.631373)
position = Vector2(5, 15)
scale = Vector2(0.048, 0.048)
texture = ExtResource("6_nhtms")

[node name="StealthLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Stealth"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "78"
horizontal_alignment = 2

[node name="Tech" type="PanelContainer" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="Heart5" type="Sprite2D" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Tech"]
modulate = Color(0.372549, 0.721569, 0.239216, 1)
self_modulate = Color(1, 1, 1, 0.631373)
position = Vector2(5, 16)
scale = Vector2(0.048, 0.048)
texture = ExtResource("7_mkm0r")

[node name="TechLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/HBoxContainer/Tech"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "20"
horizontal_alignment = 2

[node name="Status" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 8

[node name="StatusLabel" type="Label" parent="MarginContainer/HBoxContainer/Status"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.851972, 0.886379, 0.907159, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "On Mission"
horizontal_alignment = 2

[node name="PortraitBorder" type="TextureRect" parent="."]
self_modulate = Color(0.58, 0.30479, 0.1566, 1)
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("9_ny7d8")
expand_mode = 1

[node name="PortraitBackground" type="TextureRect" parent="PortraitBorder"]
self_modulate = Color(0.673112, 0.887253, 0.905198, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_pgjc5")
expand_mode = 1

[node name="PortraitTexture" type="TextureRect" parent="PortraitBorder/PortraitBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_gmp50")
expand_mode = 1
